syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "Protos/invocables_service_types.proto";

option csharp_namespace = "TagTool.BackendNew.Services.Grpc";

package TagToolBackendNew;

service InvocablesService {
  // Get a descriptions of all available Invocables
  rpc GetInvocablesDescriptions (GetInvocablesDescriptionsRequest) returns (GetInvocablesDescriptionsReply);

  // Get all created Invocables
  rpc GetInvocables (GetInvocablesRequest) returns (GetInvocablesReply);

  // Creates a new Invocable.
  rpc CreateInvocable (CreateInvocableRequest) returns (CreateInvocableReply);

  // BroadcastEvent
  rpc BroadcastEvent (google.protobuf.Empty) returns (google.protobuf.Empty);
}
