syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";
import "Protos/job_service_types.proto";

option csharp_namespace = "TagTool.BackendNew";

package TagToolBackendNew;

service JobService {
  // Creates a new job.
  rpc CreateJob (CreateJobRequest) returns (CreateJobReply);
}
