syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "TagTool.BackendNew";

package TagToolBackendNew;

message GetJobsDescriptionsRequest {
}

message GetJobsDescriptionsReply {
  // triggers
  // fields
}

message GetJobsRequest {
}

message GetJobsReply {
}

message CreateJobRequest {
  string type = 1;
  string Args = 2;
  ItemTaggedTrigger trigger = 3;

  message ItemTaggedTrigger {
  }
}

message CreateJobReply{
}

